es-space-mgmt/main/default/objects/Customer_Fields__mdt/fields/Customer_Reservation_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reservation_Status_Value__c</fullName>
    <label>Customer Reservation Status Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>