es-space-mgmt/main/default/objects/Customer_Fields__mdt/fields/Customer_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_State__c</fullName>
    <label>Customer State</label>
    <metadataRelationshipControllingField>Customer_Fields__mdt.Sobject_Type__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Customer_Fields1</relationshipLabel>
    <relationshipName>Customer_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>